--- a/views/contacto.html
+++ b/views/contacto.html
@@ -87,11 +87,11 @@
 
     </div>
     <div class="share">
-        <a href="#" class="fab fa-facebook"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
-        <a href="#" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-pinterest"></a>
+        <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
+        <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
+        <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
+        <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
+        <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
     </div>
     <div class="credit">
         © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
