--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -75,7 +75,7 @@
           <spam><u>Politica de privacidad</u></spam>
 
         </label>
-          <!-- Agregamos el boton de enviar  -->
+        <!-- Agregamos el boton de enviar  -->
         <input type="submit" value="Enviar formulario" class="enviar" />
       </form>
 
@@ -149,11 +149,11 @@
 
     </div>
     <div class="share">
-      <a href="#" class="fab fa-facebook"></a>
-      <a href="#" class="fab fa-twitter"></a>
-      <a href="#" class="fab fa-instagram"></a>
-      <a href="#" class="fab fa-linkedin"></a>
-      <a href="#" class="fab fa-pinterest"></a>
+      <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
+      <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
+      <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
+      <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
+      <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
     </div>
     <div class="credit">
       © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
