--- a/views/productos.html
+++ b/views/productos.html
@@ -3,138 +3,133 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width">
   <title>Produtos - Barbería ByAlex</title>
-  <link rel="stylesheet" href="../css/reset.css" />
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/style.css">
   <!-- link iconos CSS-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
-
-<div>
-  <!-- Iniciamos con la barra de navegación-->
-  <header>
-    <div class="caja">
-      <a href="#"><img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo" /></a>
-      <nav>
-        <ul>
-          <li>
-            <a href="../index.html">Home</a>
-          </li>
-          <li>
-            <a id="selected" href="productos.html">Productos</a>
-          </li>
-          <li>
-            <a href="presupuesto.html" "
-                >Contacto</a
-              >
-            </li>
-            <li><a href=" contacto.html">Ubicación</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <!-- Agregamos los productos que ofrecemos-->
-
-  <body>
-    <main>
-      <ul class="productos">
+<!-- Iniciamos con la barra de navegación-->
+<header>
+  <div class="caja">
+    <a href="#"><img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo"></a>
+    <nav>
+      <ul>
         <li>
-          <h2>Cabello</h2>
-          <img src="../imagenes/cabello.jpg" />
-          <p class="producto-descripcion">
-            Con tijera o máquina, a gusto del cliente
-          </p>
-          <p class="producto-precio">$ 10.00</p>
+          <a href=" ../index.html">Home</a>
         </li>
         <li>
-          <h2>Barba</h2>
-          <img src="../imagenes/barba.jpg" />
-          <p class="producto-descripcion">
-            Corte y diseño profesional de barba
-          </p>
-          <p class="producto-precio">$ 08.00</p>
+          <a id="selected" href="productos.html">Productos</a>
         </li>
         <li>
-          <h2>Cabello + Barba</h2>
-          <img src="../imagenes/cabello+barba.jpg" />
-          <p class="producto-descripcion">
-            Paquete completo de cabello y barba
-          </p>
-          <p class="producto-precio">$ 15.00</p>
+          <a href="presupuesto.html">Contacto</a>
+        </li>
+        <li><a href="contacto.html">Ubicación</a>
         </li>
       </ul>
+    </nav>
+  </div>
+</header>
+<!-- Agregamos los productos que ofrecemos-->
 
-      <h2 class="titulo-principal">Galería Barbería ByAlex</h2>
-      <section class="container">
-        <div id="img"></div>
-        <div id="img"></div>
-        <div id="img"></div>
-        <div id="img"></div>
-        <div id="img"></div>
-        <div id="img"></div>
-        <div id="img"></div>
-      </section>
+<>
+  <main>
+    <ul class="productos">
+      <li>
+        <h2>Cabello</h2>
+        <img src="../imagenes/cabello.jpg" alt="FotoCabello">
+        <p class="producto-descripcion">
+          Con tijera o máquina, a gusto del cliente
+        </p>
+        <p class="producto-precio">$ 10.00</p>
+      </li>
+      <li>
+        <h2>Barba</h2>
+        <img src="../imagenes/barba.jpg" alt="FotoBarba">
+        <p class="producto-descripcion">
+          Corte y diseño profesional de barba
+        </p>
+        <p class="producto-precio">$ 08.00</p>
+      </li>
+      <li>
+        <h2>Cabello + Barba</h2>
+        <img src="../imagenes/cabello+barba.jpg" alt="FotCabello+Barba">
+        <p class="producto-descripcion">
+          Paquete completo de cabello y barba
+        </p>
+        <p class="producto-precio">$ 15.00</p>
+      </li>
+    </ul>
 
-    </main>
-    <!-- El pie de página -->
-    <footer class="footer" id="contact">
-      <div class="box-container">
-        <div class="content">
-          <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
-          <h1 class="logoName">ByAlex BarberShop</h1>
-        </div>
-        <div class="box">
-          <h3>Quick link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-        </div>
-        <div class="box">
-          <h3>Extra link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-        </div>
-        <div class="box">
-          <h3>Extra Link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
-        </div>
+    <h2 class="titulo-principal">Galería Barbería ByAlex</h2>
+    <section class="container" id="img">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
 
-        <div class="box">
-          <h3>Contact Info</h3>
-          <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
-          <a href="#">
-            <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
-          <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
-            <i class="fa-regular fa-map"></i>Ubicación:
-            Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
-        </div>
-
-
+  </main>
+  <!-- El pie de página -->
+  <footer class="footer" id="contact">
+    <div class="box-container">
+      <div class="content">
+        <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
+        <h1 class="logoName">ByAlex BarberShop</h1>
       </div>
-      <div class="share">
-        <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
-        <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
-        <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
-        <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
-        <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
+      <div class="box">
+        <h3>Quick link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
       </div>
-      <div class="credit">
-        © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
+      <div class="box">
+        <h3>Extra link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
       </div>
-    </footer>
-  </body>
+      <div class="box">
+        <h3>Extra Link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
+      </div>
+
+      <div class="box">
+        <h3>Contact Info</h3>
+        <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
+        <a href="#">
+          <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
+        <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
+          <i class="fa-regular fa-map"></i>Ubicación:
+          Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+      </div>
+
+
+    </div>
+    <div class="share">
+      <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
+      <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
+      <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
+      <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
+      <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
+    </div>
+    <div class="credit">
+      © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
+    </div>
+  </footer>
 
 </html>
