--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width">
   <title>Contacto - Barbería ByAlex</title>
-  <link rel="stylesheet" href="../css/reset.css" />
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/style.css">
   <!-- csn icon link-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 
     <div class="caja">
       <a href="#">
-        <img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo" />
+        <img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo">
       </a>
       <nav>
         <ul>
@@ -31,19 +31,19 @@
       </nav>
     </div>
   </header>
-  <div class="formulario">
+  < class="formulario">
     <!--Iniciamos con el formulario-->
     <main class="main-contacto">
 
       <form>
         <label for="nombreapellido">Nombre y Apellido</label>
-        <input type="text" id="nombreapellido" class="input-padron" required />
+        <input type="text" id="nombreapellido" class="input-padron" required>
 
         <label for="correoelectronico">Correo Electronico</label>
-        <input type="email" id="correoelectronico" class="input-padron" required placeholder="email@dominio.com" />
+        <input type="email" id="correoelectronico" class="input-padron" required placeholder="email@dominio.com">
 
         <label for="telefono">Telefono</label>
-        <input type="tel" id="telefono" class="input-padron" required placeholder="(XX) XXXX XXXX" />
+        <input type="tel" id="telefono" class="input-padron" required placeholder="(XX) XXXX XXXX">
 
         <label for="mensaje">Mensaje</label>
         <textarea id="mensaje" cols="70" rows="10" class="input-padron" required></textarea>
@@ -51,13 +51,13 @@
         <fieldset>
           <legend>¿Cómo le gustaría que lo contactemos?</legend>
 
-          <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email" />Email</label>
+          <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email">Email</label>
 
           <label for="radio-telefono"><input type="radio" name="contacto" value="telefono"
-              id="radio-telefono" />Teléfono</label>
+              id="radio-telefono">Teléfono</label>
 
           <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp"
-              checked />Whatsapp</label>
+              checked>Whatsapp</label>
         </fieldset>
 
         <fieldset>
@@ -69,14 +69,15 @@
           </select>
         </fieldset>
 
-        <label class="checkbox"><input type="checkbox" checked />¿Le gutaría recibir novedades de la
+        <div class="checkbox"><input type="checkbox" checked>
+          ¿Le gutaría recibir novedades de la
           Barbería ByAlex?
-          <div></div><input type="checkbox" required />He leído y acepto la
-          <spam><u>Politica de privacidad</u></spam>
-
-        </label>
-        <!-- Agregamos el boton de enviar  -->
-        <input type="submit" value="Enviar formulario" class="enviar" />
+          <div><input type="checkbox" required>
+            He leído y acepto la
+            <spam><u>Politica de privacidad
+          </div></u></spam>
+          <!-- Agregamos el boton de enviar  -->
+          <input type="submit" value="Enviar formulario" class="enviar" />
       </form>
 
       <table>
@@ -102,62 +103,62 @@
         </tbody>
       </table>
     </main>
-  </div>
-  <!-- El pie de pagina -->
-  <footer class="footer" id="contact">
-    <div class="box-container">
-      <div class="content">
-        <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
-        <h1 class="logoName">ByAlex BarberShop</h1>
-      </div>
-      <div class="box">
-        <h3>Quick link</h3>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-      </div>
-      <div class="box">
-        <h3>Extra link</h3>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-      </div>
-      <div class="box">
-        <h3>Extra Link</h3>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
-      </div>
-
-      <div class="box">
-        <h3>Contact Info</h3>
-        <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
-        <a href="#">
-          <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
-        <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
-          <i class="fa-regular fa-map"></i>Ubicación:
-          Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
-      </div>
-
-
     </div>
-    <div class="share">
-      <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
-      <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
-      <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
-      <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
-      <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
-    </div>
-    <div class="credit">
-      © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
-    </div>
-  </footer>
+    <!-- El pie de pagina -->
+    <footer class="footer" id="contact">
+      <div class="box-container">
+        <div class="content">
+          <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
+          <h1 class="logoName">ByAlex BarberShop</h1>
+        </div>
+        <div class="box">
+          <h3>Quick link</h3>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+        </div>
+        <div class="box">
+          <h3>Extra link</h3>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+        </div>
+        <div class="box">
+          <h3>Extra Link</h3>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
+        </div>
+
+        <div class="box">
+          <h3>Contact Info</h3>
+          <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
+          <a href="#">
+            <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
+          <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
+            <i class="fa-regular fa-map"></i>Ubicación:
+            Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+        </div>
+
+
+      </div>
+      <div class="share">
+        <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
+        <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
+        <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
+        <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
+        <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
+      </div>
+      <div class="credit">
+        © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
+      </div>
+    </footer>
 </body>
 
 </html>
