--- a/css/style.css
+++ b/css/style.css
@@ -298,11 +298,8 @@ nav a:hover {
     margin: 0 auto;
 }
 
-
-
 form {
     margin: 40px 0;
-
 }
 
 /*damos tamaño a los cuadros*/
@@ -325,13 +322,14 @@ form legend {
 }
 
 .checkbox spam {
-    color: blue;
+    color: rgb(83, 83, 247);
     cursor: pointer;
 }
 
 /*Agregamos color , tamaño y estilos al boton de enviar el formulario*/
 .enviar {
     width: 40%;
+    margin: 30px 0;
     padding: 15px 0;
     font-size: 18px;
     font-weight: bold;
