--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -16,7 +16,6 @@
 <body>
   <!-- Iniciamos la barra de navegacion-->
   <header>
-
     <div class="caja">
       <a href="#">
         <img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo">
@@ -31,7 +30,8 @@
       </nav>
     </div>
   </header>
-  <class="formulario">
+
+  <div class="formulario">
     <!--Iniciamos con el formulario-->
     <main class="main-contacto">
 
@@ -105,62 +105,62 @@
         </tbody>
       </table>
     </main>
+  </div>
+  <!-- El pie de pagina -->
+  <footer class="footer" id="contact">
+    <div class="box-container">
+      <div class="content">
+        <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
+        <h1 class="logoName">ByAlex BarberShop</h1>
+      </div>
+      <div class="box">
+        <h3>Quick link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+      </div>
+      <div class="box">
+        <h3>Extra link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+      </div>
+      <div class="box">
+        <h3>Extra Link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
+      </div>
+
+      <div class="box">
+        <h3>Contact Info</h3>
+        <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
+        <a href="#">
+          <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
+        <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
+          <i class="fa-regular fa-map"></i>Ubicación:
+          Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+      </div>
+
+
     </div>
-    <!-- El pie de pagina -->
-    <footer class="footer" id="contact">
-      <div class="box-container">
-        <div class="content">
-          <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
-          <h1 class="logoName">ByAlex BarberShop</h1>
-        </div>
-        <div class="box">
-          <h3>Quick link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-        </div>
-        <div class="box">
-          <h3>Extra link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-        </div>
-        <div class="box">
-          <h3>Extra Link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
-        </div>
-
-        <div class="box">
-          <h3>Contact Info</h3>
-          <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
-          <a href="#">
-            <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
-          <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
-            <i class="fa-regular fa-map"></i>Ubicación:
-            Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
-        </div>
-
-
-      </div>
-      <div class="share">
-        <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
-        <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
-        <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
-        <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
-        <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
-      </div>
-      <div class="credit">
-        © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
-      </div>
-    </footer>
+    <div class="share">
+      <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
+      <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
+      <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
+      <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
+      <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
+    </div>
+    <div class="credit">
+      © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
+    </div>
+  </footer>
 </body>
 
 </html>
