--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -35,7 +35,7 @@
     <!--Iniciamos con el formulario-->
     <main class="main-contacto">
 
-      <form>
+      <>
         <label for="nombreapellido">Nombre y Apellido</label>
         <input type="text" id="nombreapellido" class="input-padron" required>
 
@@ -75,35 +75,33 @@
           Barbería ByAlex?
           <div><input type="checkbox" required>
             He leído y acepto la
-            <spam><u>Politica de privacidad
-              </u></spam>
+            <u>Politica de privacidad</u>
           </div>
-          <!-- Agregamos el boton de enviar  -->
-          <input type="submit" value="Enviar formulario" class="enviar">
-      </form>
-
-      <table>
-        <thead>
-          <tr>
-            <th>Día</th>
-            <th>Horario</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Lunes</td>
-            <td>08h ~ 20h</td>
-          </tr>
-          <tr>
-            <td>Miércoles</td>
-            <td>08h ~ 20h</td>
-          </tr>
-          <tr>
-            <td>Viernes</td>
-            <td>08h ~ 20h</td>
-          </tr>
-        </tbody>
-      </table>
+        </div>
+        <!-- Agregamos el boton de enviar  -->
+        <input type="submit" value="Enviar formulario" class="enviar">
+        <table>
+          <thead>
+            <tr>
+              <th>Día</th>
+              <th>Horario</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Lunes</td>
+              <td>08h ~ 20h</td>
+            </tr>
+            <tr>
+              <td>Miércoles</td>
+              <td>08h ~ 20h</td>
+            </tr>
+            <tr>
+              <td>Viernes</td>
+              <td>08h ~ 20h</td>
+            </tr>
+          </tbody>
+        </table>
     </main>
   </div>
   <!-- El pie de pagina -->
