--- a/css/style.css
+++ b/css/style.css
@@ -503,12 +503,23 @@ th {
         height: 80%;
     }
 
-    .caja-diferenciales {
+    .logo {
+        cursor: pointer;
+        height: 80%;
+        width: 80%;
+    }
+
+    .diferenciales {
         display: flex;
         flex-direction: column;
         align-items: center;
         margin: 50px 0;
         width: 80%;
         gap: 10px;
+    }
+
+    .footer {
+        width: 80%;
+        height: 80%;
     }
 }
