--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ header {
 }
 
 .logo {
-    position: absolute;
+    position: block;
     cursor: pointer;
     height: 150px;
     width: 150px;
@@ -114,6 +114,7 @@ nav a:hover {
     font-size: 2em;
     clear: left;
     font-weight: bold;
+    margin: 2rem 0;
 }
 
 .principal p {
@@ -213,13 +214,11 @@ nav a:hover {
 /*Utilizamos la sentencia Flex para dar forma a las cajas de los productos*/
 .productos {
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+    flex-flow: row nowrap;
     align-content: center;
-    justify-content: space-around;
-    width: 940px;
-    margin: 0 auto;
-    padding: 50px;
+    justify-content: space-between;
+    margin: 0 20px;
+    padding: 50px 0px;
     gap: 100px;
     cursor: pointer;
 }
@@ -228,7 +227,7 @@ nav a:hover {
 .productos li {
     display: inline-block;
     text-align: center;
-    width: 30%;
+    width: auto;
     vertical-align: top;
     margin: 0 1.5%;
     padding: 30px 20px;
@@ -269,14 +268,14 @@ nav a:hover {
 /*Inicia la Galería con GRID!*/
 
 .container {
-    width: 100%;
-    max-width: 1100px;
+    width: auto;
     margin: 60px auto;
     display: grid;
     grid-template-columns:
         repeat(4, 1fr);
     grid-auto-rows: 250px;
     gap: 4px;
+    padding: 0px 50px;
 }
 
 .container div {
@@ -319,8 +318,6 @@ nav a:hover {
 }
 
 #img {
-    width: 100%;
-    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -425,17 +422,17 @@ th {
 /*Utilizamos grid para organizar de la mejor manera los contenedores del .box-container*/
 .footer .box-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
     /*repite el cuadro de 10px como mínimo y máximo 1 fracción*/
     gap: 0.5rem;
-    padding: 2rem 0.5rem;
+    padding: 1rem 0.5rem;
 }
 
 /*utilizamos flex para darle la orientación de columna a los elementos*/
 .footer .box-container .content {
     display: flex;
     flex-direction: column;
-    margin-bottom: 2rem;
+    padding: 2rem 0;
 }
 
 .footer .box {
@@ -451,23 +448,24 @@ th {
     color: var(--black);
 }
 
+
+
 .footer .box-container .box h3 {
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 2rem;
     color: var(--black);
     padding: 1rem 0;
 }
 
 .footer .box-container .box a {
     display: block;
-    font-size: 16px;
+    font-size: 1rem;
     color: var(--black);
     padding: 1rem 0;
     text-decoration: none;
 }
 
 .footer .box-container .box a i {
-    /* padding-right: .5rem; */
     color: var(--black);
 }
 
@@ -477,6 +475,7 @@ th {
 }
 
 .footer .share {
+    margin: 2rem 0;
     padding: 1rem 0;
     text-align: center;
 }
@@ -528,13 +527,22 @@ th {
 }
 
 /*media queries for web responsive*/
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
     * {
         margin: 0;
     }
 
     html {
         margin: 0;
+    }
+
+    nav a {
+        display: inline-block;
+        text-transform: uppercase;
+        color: #000000;
+        font-weight: bold;
+        font-size: 12px;
+        text-decoration: none;
     }
 
     /* Ajustes generales */
@@ -572,7 +580,24 @@ th {
     }
 
     nav {
-        top: 70px;
+        top: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+
+    li a {
+        padding: 10px;
+        border: solid 1px black;
+        border-radius: 10px;
+        margin: 2px;
+        color: black;
+        background-color: #BBBBBB;
+    }
+
+    ul {
+        display: flex;
+        flex-flow: column wrap;
     }
 
     /* Banner responsive */
@@ -622,5 +647,19 @@ th {
         width: 300px;
         height: 200px;
     }
-}
+
+    .productos {
+        display: flex;
+        flex-flow: column wrap;
+    }
+
+    .productos li {
+        width: auto;
+        vertical-align: top;
+        margin: 0 1.5%;
+        padding: 30px 0px;
+        box-sizing: border-box;
+        border: 2px solid #000000;
+        border-radius: 10px;
+    }
 }
