--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -110,9 +110,11 @@
   </div>
   <!-- El pie de pagina -->
   <footer class="footer" id="contact">
+
     <div class="box-container">
       <div class="content">
-        <a href="#"><img src="../imagenes/logo.png" width="250" height="250" alt="Logo" class="logo"></a>
+        <a href="#"><img src="./imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"
+            alt="imagen-logo"></a>
         <h1 class="logoName">ByAlex BarberShop</h1>
       </div>
       <div class="box">
@@ -132,25 +134,15 @@
         <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
       </div>
       <div class="box">
-        <h3>Extra Link</h3>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
-      </div>
-
-      <div class="box">
         <h3>Contact Info</h3>
         <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
         <a href="#">
-          <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
+          <i class="fas fa-envelope"></i>ByAlexdesigner</br>@gmail.com</a>
         <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
           <i class="fa-regular fa-map"></i>Ubicación:
           Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+
       </div>
-
-
     </div>
     <div class="share">
       <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
