--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ nav a:hover {
     grid-column: 5/2;
 }
 
-#img {
+.img {
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
