--- a/views/productos.html
+++ b/views/productos.html
@@ -65,13 +65,13 @@
 
   <h2 class="titulo-principal">Galería Barbería ByAlex</h2>
   <div class="container">
-    <div id="img"></div>
-    <div id="img"></div>
-    <div id="img"></div>
-    <div id="img"></div>
-    <div id="img"></div>
-    <div id="img"></div>
-    <div id="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
   </div>
 
 </main>
@@ -104,7 +104,7 @@
       <h3>Contact Info</h3>
       <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
       <a href="#">
-        <i class="fas fa-envelope"></i>ByAlexdesigner</br>@gmail.com</a>
+        <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
       <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
         <i class="fa-regular fa-map"></i>Ubicación:
         Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
