--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -106,6 +106,7 @@
             </tr>
           </tbody>
         </table>
+      </form>
     </main>
   </div>
   <!-- El pie de pagina -->
@@ -113,8 +114,7 @@
 
     <div class="box-container">
       <div class="content">
-        <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"
-            alt="imagen-logo"></a>
+        <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"></a>
         <h1 class="logoName">ByAlex BarberShop</h1>
       </div>
       <div class="box">
