--- a/views/productos.html
+++ b/views/productos.html
@@ -80,8 +80,7 @@
 
   <div class="box-container">
     <div class="content">
-      <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"
-          alt="imagen-logo"></a>
+      <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"></a>
       <h1 class="logoName">ByAlex BarberShop</h1>
     </div>
     <div class="box">
@@ -104,7 +103,7 @@
       <h3>Contact Info</h3>
       <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
       <a href="#">
-        <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
+        <i class="fas fa-envelope"></i>ByAlex@gmail.com</a>
       <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
         <i class="fa-regular fa-map"></i>Ubicación:
         Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
